# locoguess

./: .gitignore  CLAUDE.md  docker-compose.https.yml  docker-compose.offline.yml  docker-compose.yml  rebuild.sh  run-https.sh  run-offline.sh  run.sh  stop.sh
backend/: .dockerignore  Dockerfile  pyproject.toml  seed.py
backend/app/: admin.py  config.py  database.py  game_packs.py  main.py  utils.py
backend/app/models/: __init__.py  game.py  guess.py  pack.py  team.py
backend/app/routers/: games.py  packs.py  rounds.py  teams.py
backend/app/schemas/: game.py  guess.py  pack.py  team.py
backend/app/services/: drafts.py  game_service.py  scoring.py
backend/app/ws/: handler.py  manager.py
backend/tests/: conftest.py  test_api.py  test_game_service.py  test_models.py  test_scoring.py  test_ws.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx-https.conf  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/Game/: GuessMap.tsx  PhotoDisplay.tsx  RoundResults.tsx  Timer.tsx
frontend/src/hooks/: useGameState.ts  useRoundMusic.ts  useServerRestart.ts  useWebSocket.ts
frontend/src/pages/: GamePage.tsx  HomePage.tsx  HostLobbyPage.tsx  HostSetupPage.tsx  JoinPage.tsx  MarketplacePage.tsx  ResultsPage.tsx
frontend/src/types/: game.ts
frontend/tests/components/: Scoreboard.test.tsx  Timer.test.tsx
frontend/tests/hooks/: useGameState.test.ts
offline/: README.md  download-tiles.py  extract-pois.py
(+12 files in other folders)
